# final_project_ws

./: 2조 프로젝트_계획서-1.hwp  README.md  프로젝트 기술서(김재환).hwp
final_project/src/custom_bringup/: package.xml  setup.cfg  setup.py
final_project/src/custom_bringup/custom_bringup/: arm_service_server.py  custom_control.py  detect_wall_action.py  sound_angle_pub.py  sound_angle_sub.py  tf_coordinate_transform.py  tuning.py
final_project/src/custom_bringup/launch/: custom_bringup.launch.py
final_project/src/custom_interface/: CMakeLists.txt  package.xml
final_project/src/custom_interface/action/: StopOnObstacle.action
res_turtlebot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
res_turtlebot/install/res_turtlebot/lib/res_turtlebot/: respeaker_turtlebot  respeaker_turtlebot_test.py  tuning
res_turtlebot/install/res_turtlebot/share/res_turtlebot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
res_turtlebot/log/: latest_build
res_turtlebot/src/res_turtlebot/: package.xml  setup.cfg  setup.py
res_turtlebot/src/res_turtlebot/res_turtlebot/: respeaker_turtlebot.py  respeaker_turtlebot_test.py  tuning.py
장재희_readmemd/: README.md  doa_test.py  realsense_test.py  whisper_test.py
장재희_readmemd/gazebo_map/gazebo/: map.py  move_robot_position.py  test_world.launch.py
하정민_Gazebo/: README.md  read.md
하정민_Gazebo/gazebo_map_J/: map.yaml
하정민_Gazebo/gazebo_map_J/gazebo/: map_world.world
하정민_Gazebo/my_gazebo_H/: empty.world  test.world
하정민_Gazebo/my_gazebo_H/course/: model.sdf
